# aoc

./: .gitignore
2023/: pyproject.toml
2023/01/: part1.py  part2.py  test_p1.py
2023/02/: part1.py  part2.py
2023/03/: part1.py  part2.py  test_p1.py  test_p2.py
2023/04/: part1.py  part2.py
2023/05/: part1.py  part2.py  test_p1.py  test_p2.py
2023/06/: part1.py  part2.py  test_p2.py
2023/07/: part1.py  part2.py
2023/08/: test_p1.py  test_p2.py  test_p2_2.py  test_p2_3.py
2023/09/: test_p2.py
2023/src/01/: test_p2.py
2023/src/02/: test_p1.py  test_p2.py
2023/src/04/: test_p1.py  test_p2.py
2023/src/05/: test_p2.py
2023/src/06/: test_p1.py
2023/src/07/: test_p1.py  test_p2.py
2023/src/08/: test_p2.py
2023/src/09/: test_p1.py
2023/src/10/: test_p1.py  test_p2.py
